--- a/valentines.html
+++ b/valentines.html
@@ -10,7 +10,7 @@
       margin: 0;
       height: 100vh;
       background: linear-gradient(135deg, #ffb6c1, #ffc0cb);
-      font-family: 'Segoe UI', sans-serif;
+      font-family: 'Segoe UI', system-ui, -apple-system, sans-serif;
       overflow: hidden;
       display: flex;
       justify-content: center;
@@ -18,62 +18,82 @@
     }
 
     .container {
-      background: rgba(255, 255, 255, 0.9);
-      padding: 40px 50px;
-      border-radius: 20px;
+      width: min(520px, 92vw);
+      background: rgba(255, 255, 255, 0.92);
+      padding: 26px 22px 28px;
+      border-radius: 22px;
       text-align: center;
-      box-shadow: 0 20px 40px rgba(0,0,0,0.15);
+      box-shadow: 0 20px 40px rgba(0,0,0,0.18);
       z-index: 2;
+      backdrop-filter: blur(6px);
+    }
+
+    .media {
+      width: 100%;
+      border-radius: 18px;
+      overflow: hidden;
+      box-shadow: 0 10px 25px rgba(0,0,0,0.18);
+      margin-bottom: 16px;
+      background: rgba(255,255,255,0.6);
+    }
+
+    .media img,
+    .media video {
+      width: 100%;
+      height: auto;
+      display: block;
+      object-fit: cover;
     }
 
     h1 {
       color: #e75480;
-      margin-bottom: 30px;
+      margin: 10px 0 16px;
+      font-size: 28px;
+      line-height: 1.15;
+    }
+
+    .sub {
+      margin-top: -6px;
+      margin-bottom: 10px;
+      color: #b64a6c;
+      font-size: 14px;
+      opacity: 0.9;
     }
 
     button {
       padding: 12px 30px;
       font-size: 18px;
-      border-radius: 30px;
+      border-radius: 999px;
       border: none;
       cursor: pointer;
-      margin: 10px;
-      transition: transform 0.2s ease, background 0.2s ease;
+      margin: 10px 8px 0;
+      transition: transform 0.2s ease, filter 0.2s ease;
+      user-select: none;
     }
 
-    button:hover {
-      transform: scale(1.1);
-    }
+    button:hover { transform: scale(1.06); filter: brightness(1.02); }
 
-    .yes {
-      background: #ff69b4;
-      color: white;
-    }
-
+    .yes { background: #ff69b4; color: white; }
     .no {
-      background: #ddd;
+      background: #e9e9e9;
       color: #555;
       position: relative;
     }
 
-    /* Floating hearts */
+    /* Floating hearts background */
     .heart {
       position: absolute;
       bottom: -20px;
       font-size: 20px;
       color: rgba(255, 105, 180, 0.8);
       animation: floatUp linear infinite;
+      pointer-events: none;
+      z-index: 1;
     }
 
     @keyframes floatUp {
-      from {
-        transform: translateY(0) scale(1);
-        opacity: 1;
-      }
-      to {
-        transform: translateY(-110vh) scale(1.5);
-        opacity: 0;
-      }
+      from { transform: translateY(0) scale(1); opacity: 1; }
+      to   { transform: translateY(-110vh) scale(1.5); opacity: 0; }
     }
   </style>
 </head>
@@ -81,63 +101,130 @@
 <body>
 
   <div class="container">
+    <!-- Media goes here -->
+    <div class="media" id="mediaWrap">
+      <!-- default media: image -->
+      <img id="mediaImg" src="images/q1.jpg" alt="Us ❤️" />
+      <video id="mediaVid" src="images/q3.mp4" playsinline muted loop style="display:none;"></video>
+    </div>
+
     <h1 id="question">Do I love you?</h1>
+    <div class="sub" id="subtitle">Click YES 😌</div>
+
     <div id="buttons">
       <button class="yes" onclick="next()">YES</button>
     </div>
   </div>
 
   <script>
-    const questions = [
-      "Do I love you?",
-      "Do you love me?",
-      "Will you be my Valentine? 💘"
+    // ---- Customize these paths to match your repo files ----
+    const steps = [
+      { text: "Do I love you?", type: "image", src: "img1.JPG" },
+      { text: "Do you love me?", type: "image", src: "img2.JPG" },
+      { text: "Will you be my Valentine? 💘", type: "video", src: "IMG_7281.MOV" } // or set to image if you want
+      // Example if you want image instead:
+      // { text: "Will you be my Valentine? 💘", type: "image", src: "images/q3.jpg" }
     ];
 
     let step = 0;
 
+    const questionEl = document.getElementById("question");
+    const subtitleEl = document.getElementById("subtitle");
+    const buttonsEl = document.getElementById("buttons");
+    const imgEl = document.getElementById("mediaImg");
+    const vidEl = document.getElementById("mediaVid");
+
+    function showMedia(s) {
+      if (s.type === "video") {
+        // Swap to video
+        imgEl.style.display = "none";
+        vidEl.style.display = "block";
+        vidEl.src = s.src;
+        // Try to autoplay (works best if muted)
+        vidEl.muted = true;
+        vidEl.play().catch(() => {
+          // If autoplay is blocked, user can still tap play
+          vidEl.controls = true;
+        });
+      } else {
+        // Swap to image
+        vidEl.pause();
+        vidEl.style.display = "none";
+        vidEl.controls = false;
+
+        imgEl.style.display = "block";
+        imgEl.src = s.src;
+      }
+    }
+
+    function updateStep() {
+      const s = steps[step];
+      questionEl.innerText = s.text;
+      showMedia(s);
+    }
+
     function next() {
       step++;
 
-      if (step < 2) {
-        document.getElementById("question").innerText = questions[step];
-      } else {
-        document.getElementById("question").innerText = questions[step];
-        document.getElementById("buttons").innerHTML = `
+      if (step === 1) {
+        subtitleEl.innerText = "One more YES 😇";
+        updateStep();
+        return;
+      }
+
+      if (step === 2) {
+        subtitleEl.innerText = "Okay… important question 🥺";
+        updateStep();
+
+        buttonsEl.innerHTML = `
           <button class="yes" onclick="yesAnswer()">YES 💖</button>
           <button class="no" id="noBtn">NO 😢</button>
         `;
+
         const noBtn = document.getElementById("noBtn");
         noBtn.addEventListener("mouseover", moveNo);
+        noBtn.addEventListener("click", moveNo); // mobile-friendly
+        return;
       }
     }
 
     function yesAnswer() {
-      document.getElementById("question").innerText =
-        "YAY!!! 💕💍💖";
-      document.getElementById("buttons").innerHTML =
-        "<h2>I love you forever ❤️</h2>";
+      subtitleEl.innerText = "";
+      // Keep the last media on screen, or swap to any final image you want:
+      // showMedia({ type: "image", src: "images/final.jpg" });
+
+      questionEl.innerText = "YAY!!! 💕💍💖";
+      buttonsEl.innerHTML = `<h2 style="color:#e75480; margin-top:14px;">I love you forever ❤️</h2>`;
+
+      // Sprinkle extra hearts for celebration
+      for (let i = 0; i < 15; i++) spawnHeart(true);
     }
 
     function moveNo() {
       const btn = document.getElementById("noBtn");
-      const x = Math.random() * 200 - 100;
-      const y = Math.random() * 200 - 100;
+      const x = Math.random() * 240 - 120;
+      const y = Math.random() * 160 - 80;
       btn.style.transform = `translate(${x}px, ${y}px)`;
     }
 
-    // Create floating hearts
-    setInterval(() => {
+    // Floating hearts
+    function spawnHeart(burst = false) {
       const heart = document.createElement("div");
       heart.className = "heart";
-      heart.innerText = "❤️";
+      heart.innerText = Math.random() < 0.25 ? "💗" : "❤️";
       heart.style.left = Math.random() * 100 + "vw";
-      heart.style.animationDuration = Math.random() * 3 + 3 + "s";
+      heart.style.fontSize = (Math.random() * 10 + (burst ? 18 : 16)) + "px";
+      heart.style.animationDuration = (Math.random() * 3 + (burst ? 2 : 3)) + "s";
       document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 6500);
+    }
 
-      setTimeout(() => heart.remove(), 6000);
-    }, 300);
+    setInterval(() => spawnHeart(false), 280);
+
+    // Initialize
+    updateStep();
   </script>
 
 </body>
 </html>
+
